fixed inconsisting spacing

--- a/css/commissions.css
+++ b/css/commissions.css
@@ -1,3 +1,3 @@
-.contacts{
+.dodont {
     margin-top: 25px;
 }
