--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,5 +1,5 @@
 .gallery {
-    margin-top: 20px;
+    margin-top: 25px;
 }
 
 img {
